test/files/neg/t3987.check
t3987.scala:11: error: type mismatch;
 found   : Gox
 required: Test.GoxZed
    val y: GoxZed = x
                    ^
one error found
